# zenux-legacy-components

./: CMakeLists.txt  README.md  ZenuxLegacyComponentsConfig.cmake.in
resman-lib/: CMakeLists.txt  resmanrunfacade.cpp  resmanrunfacade.h  resourcemanager.h  rmprotobufwrapper.cpp  rmprotobufwrapper.h
resman-lib/resource/: resman_resourceidentity.cpp  resman_resourceidentity.h
resman-lib/scpi/: resman_catalog.cpp  resman_catalog.h  resman_delegate.cpp  resman_delegate.h  resman_resourcescpiobject.cpp  resman_resourcescpiobject.h  resman_scpiinterface.cpp  resman_scpiinterface.h
resman-lib/server/: resman_clientsocket.cpp  resman_clientsocket.h  resman_serverinterface.cpp  resman_serverinterface.h
resman-lib/tests/: CMakeLists.txt  test_connect_disconnect_free_all_mem.cpp  test_connect_disconnect_free_all_mem.h  test_scpi.cpp
service-common-code/: CMakeLists.txt
service-common-code/scpi-interfaces/: asynchnotificationsinterface.cpp  pcbserver.cpp  pcbserver.h
zera-math/: CMakeLists.txt  useratan.cpp
zera-xmlconfig/: CMakeLists.txt
zera-xmlconfig/lib/: CMakeLists.txt  xmlconfigreader.cpp  xmlconfigreader.h  xmlconfigreaderprivate.cpp  xmlconfigreaderprivate.h
zera-xmlconfig/testlib/: CMakeLists.txt  test_data.qrc
zera-xmlconfig/tests/: CMakeLists.txt  test_xmlconfigreader.cpp  test_xmlconfigreader.h
